--- a/src/multipage/pages/products/list.html
+++ b/src/multipage/pages/products/list.html
@@ -2,9 +2,10 @@
 {% block title %}demo{% endblock %}
 {% block bodyContent %}
     {% raw %}
-    <h1>Detail</h1>
+    <h1>Products List</h1>
     {% endraw %}
 {% endblock %}
+
 {% block extraScripts %}
 <script src="../vendor/jquery/jquery-1.11.0.min.js"></script>
 {% endblock %}
